// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Button Component should render Buttons of different size correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <button
          class="yolo-btn yolo-btn-primary yolo-btn-lg"
        >
          lg尺寸
        </button>
        <button
          class="yolo-btn yolo-btn-primary yolo-btn-md"
        >
          md尺寸
        </button>
        <button
          class="yolo-btn yolo-btn-primary yolo-btn-sm"
        >
          sm尺寸
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <button
        class="yolo-btn yolo-btn-primary yolo-btn-lg"
      >
        lg尺寸
      </button>
      <button
        class="yolo-btn yolo-btn-primary yolo-btn-md"
      >
        md尺寸
      </button>
      <button
        class="yolo-btn yolo-btn-primary yolo-btn-sm"
      >
        sm尺寸
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test Button Component should render Buttons of different type correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <button
          class="yolo-btn yolo-btn-default"
        >
          default
        </button>
        <button
          class="yolo-btn yolo-btn-primary"
        >
          primary
        </button>
        <button
          class="yolo-btn yolo-btn-info"
        >
          info
        </button>
        <button
          class="yolo-btn yolo-btn-warning"
        >
          warning
        </button>
        <button
          class="yolo-btn yolo-btn-danger"
        >
          danger
        </button>
        <button
          class="yolo-btn yolo-btn-dashed"
        >
          dashed
        </button>
        <button
          class="yolo-btn yolo-btn-link"
        >
          text
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <button
        class="yolo-btn yolo-btn-default"
      >
        default
      </button>
      <button
        class="yolo-btn yolo-btn-primary"
      >
        primary
      </button>
      <button
        class="yolo-btn yolo-btn-info"
      >
        info
      </button>
      <button
        class="yolo-btn yolo-btn-warning"
      >
        warning
      </button>
      <button
        class="yolo-btn yolo-btn-danger"
      >
        danger
      </button>
      <button
        class="yolo-btn yolo-btn-dashed"
      >
        dashed
      </button>
      <button
        class="yolo-btn yolo-btn-link"
      >
        text
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
